--- a/template/css/styles.css
+++ b/template/css/styles.css
@@ -135,3 +135,28 @@ a:hover {
 	color: #9bb7f4;
 	cursor: pointer;
 }
+
+.nav-list {
+	padding: 50px;
+}
+
+.nav-list li a {
+	display: block;
+	padding: 20px;
+	background: #333;
+	text-decoration: none;
+	text-transform: capitalize;
+	color: #333;
+}
+
+.nav-list li a:hover {
+	background: #444;
+}
+
+.category-list {
+	background: #7587a6 !important;
+}
+
+.note-list {
+	background: #8f9d6a !important;
+}
